force-app/main/default/objects/Property__c/fields/DisruptorLogoBanner__c.field-meta.xml
<CustomField>
    <fullName>DisruptorLogoBanner__c</fullName>
    <label>Störer Logobild Banner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>