force-app/main/default/objects/Property__c/fields/DisruptorLogoButton__c.field-meta.xml
<CustomField>
    <fullName>DisruptorLogoButton__c</fullName>
    <label>Störer Logobild Button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>