force-app/main/default/objects/Property__c/fields/DisruptorLogoOne__c.field-meta.xml
<CustomField>
    <fullName>DisruptorLogoOne__c</fullName>
    <label>Störer Logobild 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>