force-app/main/default/objects/Property__c/fields/DisruptorLogoTwo__c.field-meta.xml
<CustomField>
    <fullName>DisruptorLogoTwo__c</fullName>
    <label>Störer Logobild 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>