force-app/main/default/objects/Property__c/fields/DMSFolderId__c.field-meta.xml
<CustomField>
    <fullName>DMSFolderId__c</fullName>
    <label>DMS Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>