force-app/main/default/objects/Property__c/fields/DMSNichtUpdaten__c.field-meta.xml
<CustomField>
    <fullName>DMSNichtUpdaten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMS nicht updaten</label>
    <type>Checkbox</type>
</CustomField>