force-app/main/default/objects/Property__c/fields/DoubleRoomRatioPlanned__c.field-meta.xml
<CustomField>
    <fullName>DoubleRoomRatioPlanned__c</fullName>
    <formula>DoubleRoomsPlanned__c /  PflegeplaetzeBetten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DZ-Quote geplant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>