force-app/main/default/objects/Property__c/fields/DoubleRoomsPlanned__c.field-meta.xml
<CustomField>
    <fullName>DoubleRoomsPlanned__c</fullName>
    <description>Amount of double rooms planned by project development.</description>
    <label>Doppelzimmer geplant</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>