force-app/main/default/objects/Property__c/fields/DZQuote__c.field-meta.xml
<CustomField>
    <fullName>DZQuote__c</fullName>
    <formula>Anzahl_Doppelzimmer__c / (Anzahl_Doppelzimmer__c + Anzahl_Einzelzimmer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DZ-Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>