force-app/main/default/objects/Property__c/fields/EBT__c.field-meta.xml
<CustomField>
    <fullName>EBT__c</fullName>
    <label>EBT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>