force-app/main/default/objects/Property__c/fields/Eckpunktepapier__c.field-meta.xml
<CustomField>
    <fullName>Eckpunktepapier__c</fullName>
    <label>Eckpunktepapier</label>
    <type>Date</type>
</CustomField>