force-app/main/default/objects/Property__c/fields/Eigentumsumschreibung__c.field-meta.xml
<CustomField>
    <fullName>Eigentumsumschreibung__c</fullName>
    <label>Eigentumsumschreibung</label>
    <type>Date</type>
</CustomField>