force-app/main/default/objects/Property__c/fields/Einzel_GBB__c.field-meta.xml
<CustomField>
    <fullName>Einzel_GBB__c</fullName>
    <label>Einzel GBB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vorhanden</fullName>
            </value>
            <value>
                <fullName>Nicht vorhanden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>