force-app/main/default/objects/Property__c/fields/EinzelGbbBeantragtAm__c.field-meta.xml
<CustomField>
    <fullName>EinzelGbbBeantragtAm__c</fullName>
    <label>Einzel GBB beantragt</label>
    <type>Date</type>
</CustomField>