force-app/main/default/objects/Property__c/fields/EinzelGbbVoraussErteiltAm__c.field-meta.xml
<CustomField>
    <fullName>EinzelGbbVoraussErteiltAm__c</fullName>
    <label>Einzel GBB voraus. erteilt am</label>
    <type>Date</type>
</CustomField>