force-app/main/default/objects/Property__c/fields/Einzelkaufvertrag__c.field-meta.xml
<CustomField>
    <fullName>Einzelkaufvertrag__c</fullName>
    <label>Einzelkaufvertrag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vorhanden</fullName>
            </value>
            <value>
                <fullName>Nicht vorhanden</fullName>
            </value>
            <value>
                <fullName>Freigegeben</fullName>
            </value>
            <value>
                <fullName>Nicht freigegeben</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>