force-app/main/default/objects/Property__c/fields/EinzelkaufvertragBeantragt__c.field-meta.xml
<CustomField>
    <fullName>EinzelkaufvertragBeantragt__c</fullName>
    <label>Einzelkaufvertrag beantragt</label>
    <type>Date</type>
</CustomField>