force-app/main/default/objects/Property__c/fields/EinzelkaufvertragErhalten__c.field-meta.xml
<CustomField>
    <fullName>EinzelkaufvertragErhalten__c</fullName>
    <label>Einzelkaufvertrag erhalten</label>
    <type>Date</type>
</CustomField>