force-app/main/default/objects/Property__c/fields/Endkundenrendite__c.field-meta.xml
<CustomField>
    <fullName>Endkundenrendite__c</fullName>
    <label>Endkundenrendite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>