force-app/main/default/objects/Property__c/fields/EndkundenrenditeIst__c.field-meta.xml
<CustomField>
    <fullName>EndkundenrenditeIst__c</fullName>
    <formula>MonatsmieteBeiVerkauf__c * 12 / VerkaufsvolumenIst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endkundenrendite Ist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>