force-app/main/default/objects/Property__c/fields/EndkundenrenditePlan__c.field-meta.xml
<CustomField>
    <fullName>EndkundenrenditePlan__c</fullName>
    <formula>MonatsmieteBeiVerkauf__c * 12 / Property_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endkundenrendite Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>