force-app/main/default/objects/Property__c/fields/Energieausweis__c.field-meta.xml
<CustomField>
    <fullName>Energieausweis__c</fullName>
    <label>Energieausweis (Text)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>