force-app/main/default/objects/Property__c/fields/Energieausweis_Bild_Link__c.field-meta.xml
<CustomField>
    <fullName>Energieausweis_Bild_Link__c</fullName>
    <description>link zu dem energieausweis als bild</description>
    <label>Energieausweis_Bild_Link</label>
    <type>Url</type>
</CustomField>