force-app/main/default/objects/Property__c/fields/EnergieausweisDate__c.field-meta.xml
<CustomField>
    <fullName>EnergieausweisDate__c</fullName>
    <label>Energieausweis</label>
    <type>Date</type>
</CustomField>