force-app/main/default/objects/Property__c/fields/Erbauzins_Faktor__c.field-meta.xml
<CustomField>
    <fullName>Erbauzins_Faktor__c</fullName>
    <label>Erbauzins Faktor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>