force-app/main/default/objects/Property__c/fields/Erbbaurecht__c.field-meta.xml
<CustomField>
    <fullName>Erbbaurecht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erbbaurecht</label>
    <type>Checkbox</type>
</CustomField>