force-app/main/default/objects/Property__c/fields/ErbbaurechtText__c.field-meta.xml
<CustomField>
    <fullName>ErbbaurechtText__c</fullName>
    <label>Erbbaurecht</label>
    <length>255</length>
    <type>Text</type>
</CustomField>