force-app/main/default/objects/Property__c/fields/Erbbauzins__c.field-meta.xml
<CustomField>
    <fullName>Erbbauzins__c</fullName>
    <label>Erbbauzins pro qm</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>