force-app/main/default/objects/Property__c/fields/Erbbauzins_bis_ins_Jahr__c.field-meta.xml
<CustomField>
    <fullName>Erbbauzins_bis_ins_Jahr__c</fullName>
    <inlineHelpText>Bitte das Jahr angeben, bis wann Erbbauzin gezahlt wird</inlineHelpText>
    <label>Erbbauzins bis ins Jahr</label>
    <length>4</length>
    <type>Text</type>
</CustomField>