force-app/main/default/objects/Property__c/fields/Erbbauzins_Restlaufzeit__c.field-meta.xml
<CustomField>
    <fullName>Erbbauzins_Restlaufzeit__c</fullName>
    <formula>IF(Value(Erbbauzins_bis_ins_Jahr__c) - YEAR(TODAY()) &gt;= 0, value(Erbbauzins_bis_ins_Jahr__c) - YEAR(TODAY()), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erbbauzins Restlaufzeit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>