force-app/main/default/objects/Property__c/fields/Erbbauzinssteigerung_nach_Jahren__c.field-meta.xml
<CustomField>
    <fullName>Erbbauzinssteigerung_nach_Jahren__c</fullName>
    <label>Erbbauzinssteigerung nach Jahren</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>