force-app/main/default/objects/Property__c/fields/Erbbauzinssteigerung_um__c.field-meta.xml
<CustomField>
    <fullName>Erbbauzinssteigerung_um__c</fullName>
    <label>Erbbauzinssteigerung um %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>