force-app/main/default/objects/Property__c/fields/ExclusivitySellerUntil__c.field-meta.xml
<CustomField>
    <fullName>ExclusivitySellerUntil__c</fullName>
    <label>Exklusivität Verkäufer bis</label>
    <type>Date</type>
</CustomField>