force-app/main/default/objects/Property__c/fields/ExklusivitaetBis__c.field-meta.xml
<CustomField>
    <fullName>ExklusivitaetBis__c</fullName>
    <label>Exklusivität bis</label>
    <type>Date</type>
</CustomField>