force-app/main/default/objects/Property__c/fields/ExklusivVertrieben__c.field-meta.xml
<CustomField>
    <fullName>ExklusivVertrieben__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ist angehakt, wenn das Objekt für einige Makler &quot;exklusiv im Immofinder&quot; sichtbar ist.</inlineHelpText>
    <label>Exklusiv vertrieben</label>
    <type>Checkbox</type>
</CustomField>