force-app/main/default/objects/Property__c/fields/ExposeDate__c.field-meta.xml
<CustomField>
    <fullName>ExposeDate__c</fullName>
    <inlineHelpText>Das Datum an dem die Freigabe aus den Zentralprozessen erfolgt ist.</inlineHelpText>
    <label>Exposé</label>
    <type>Date</type>
</CustomField>