force-app/main/default/objects/Property__c/fields/FactsheetDate__c.field-meta.xml
<CustomField>
    <fullName>FactsheetDate__c</fullName>
    <inlineHelpText>Das Datum an dem die Freigabe aus den Zentralprozessen erfolgt ist.</inlineHelpText>
    <label>Factsheet</label>
    <type>Date</type>
</CustomField>