force-app/main/default/objects/Property__c/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <label>FAQ</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>