force-app/main/default/objects/Property__c/fields/FertigstellungWebsite__c.field-meta.xml
<CustomField>
    <fullName>FertigstellungWebsite__c</fullName>
    <description>Fertigstellung als Vorschau einer Presale-Immobilie</description>
    <label>Fertigstellung Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>