force-app/main/default/objects/Property__c/fields/FFEgesamt__c.field-meta.xml
<CustomField>
    <fullName>FFEgesamt__c</fullName>
    <label>FF&amp;E gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>