force-app/main/default/objects/Property__c/fields/Finanzierung_Details__c.field-meta.xml
<CustomField>
    <fullName>Finanzierung_Details__c</fullName>
    <description>Beschreibung der Finazierung</description>
    <label>Finanzierung_Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>