force-app/main/default/objects/Property__c/fields/Finanzierungen_zus_tzliche_Informationen__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungen_zus_tzliche_Informationen__c</fullName>
    <label>Finanzierungen zusätzliche Informationen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>