force-app/main/default/objects/Property__c/fields/Finanzierungsbeginn__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsbeginn__c</fullName>
    <description>Vordefinierter Beginn der Finanzierung im Maklerportal2-Immorechner.</description>
    <inlineHelpText>Vordefinierter Beginn der Finanzierung im Maklerportal2-Immorechner.</inlineHelpText>
    <label>Finanzierungsbeginn</label>
    <type>Date</type>
</CustomField>