force-app/main/default/objects/Property__c/fields/Finanzierungsberater__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsberater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanzierungsberater</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Immobilien (Finanzierungsberater)</relationshipLabel>
    <relationshipName>ImmobilienFinanzierungsberater</relationshipName>
    <type>Lookup</type>
</CustomField>