force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Bereitstellungszins__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Bereitstellungszins__c</fullName>
    <label>Finanzierungslinie Bereitstellungszins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>