force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Informationen__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Informationen__c</fullName>
    <label>Finanzierungslinie Informationen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>