force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Kaufpreis_max__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Kaufpreis_max__c</fullName>
    <label>Finanzierungslinie Kaufpreis max (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>