force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Laufzeit_max__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Laufzeit_max__c</fullName>
    <label>Finanzierungslinie Laufzeit (max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>