force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Sondertilgung__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Sondertilgung__c</fullName>
    <label>Finanzierungslinie Sondertilgung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>