force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Zinsbindung__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Zinsbindung__c</fullName>
    <label>Finanzierungslinie Zinsbindung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>