force-app/main/default/objects/Property__c/fields/Finanzierungslinie_Zinssatz__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungslinie_Zinssatz__c</fullName>
    <label>Finanzierungslinie Zinssatz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>