force-app/main/default/objects/Property__c/fields/Fl_che_bis__c.field-meta.xml
<CustomField>
    <fullName>Fl_che_bis__c</fullName>
    <label>Fläche bis</label>
    <summarizedField>Appartment__c.Area_sq_m__c</summarizedField>
    <summaryFilterItems>
        <field>Appartment__c.ExternNichtAnzeigen__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>