force-app/main/default/objects/Property__c/fields/FocusLiquidity__c.field-meta.xml
<CustomField>
    <fullName>FocusLiquidity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fokus Liquidität</label>
    <type>Checkbox</type>
</CustomField>