force-app/main/default/objects/Property__c/fields/Foerderung__c.field-meta.xml
<CustomField>
    <fullName>Foerderung__c</fullName>
    <label>Förderung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KfW-40 (NH)</fullName>
            </value>
            <value>
                <fullName>KfW-40</fullName>
            </value>
            <value>
                <fullName>KfW-55 (EE)</fullName>
            </value>
            <value>
                <fullName>KfW-55</fullName>
            </value>
            <value>
                <fullName>KFWG</fullName>
            </value>
            <value>
                <fullName>KfWG-Q</fullName>
            </value>
            <value>
                <fullName>KFN-WG-Q</fullName>
            </value>
            <value>
                <fullName>KfW-40 (EE)</fullName>
                <isActive>false</isActive>
                <label>KfW-40 (EE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>