force-app/main/default/objects/Property__c/fields/FORMULA_AktuelleMaBVRate_Num__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_AktuelleMaBVRate_Num__c</fullName>
    <formula>IF(ISBLANK(AktuelleMaBVRateLookup__c), 0, VALUE(TEXT(AktuelleMaBVRateLookup__r.RateNummer__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aktuelle MaBV Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>