force-app/main/default/objects/Property__c/fields/Freie_Appartments__c.field-meta.xml
<CustomField>
    <fullName>Freie_Appartments__c</fullName>
    <label>Freie Apartments</label>
    <summaryFilterItems>
        <field>Appartment__c.Status__c</field>
        <operation>equals</operation>
        <value>Available, Verfügbar</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Appartment__c.ExternNichtAnzeigen__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Appartment__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>