force-app/main/default/objects/Property__c/fields/GeneralNotesOnDates__c.field-meta.xml
<CustomField>
    <fullName>GeneralNotesOnDates__c</fullName>
    <label>Allgemeine Anmerkungen zu Terminen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>