force-app/main/default/objects/Property__c/fields/Generalunternehmer__c.field-meta.xml
<CustomField>
    <fullName>Generalunternehmer__c</fullName>
    <label>Generalunternehmer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>