force-app/main/default/objects/Property__c/fields/Geo_data__c.field-meta.xml
<CustomField>
    <fullName>Geo_data__c</fullName>
    <label>Geo data</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>