force-app/main/default/objects/Property__c/fields/Geoportanalyse__c.field-meta.xml
<CustomField>
    <fullName>Geoportanalyse__c</fullName>
    <label>Geoportanalyse</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>