force-app/main/default/objects/Property__c/fields/GeplanteEHDiesesGeschaeftsjahr__c.field-meta.xml
<CustomField>
    <fullName>GeplanteEHDiesesGeschaeftsjahr__c</fullName>
    <label>Geplante EH dieses Geschäftsjahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>