force-app/main/default/objects/Property__c/fields/GeplanterVertriebsstartAm__c.field-meta.xml
<CustomField>
    <fullName>GeplanterVertriebsstartAm__c</fullName>
    <label>Geplanter Vertriebsstart am</label>
    <type>Date</type>
</CustomField>