force-app/main/default/objects/Property__c/fields/GesamtanzahlRechnungen__c.field-meta.xml
<CustomField>
    <fullName>GesamtanzahlRechnungen__c</fullName>
    <formula>AktuelleMaBVRateLookup__r.GesamtanzahlRechnungen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesamtanzahl der Rechnungen (akt. Rate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>