force-app/main/default/objects/Property__c/fields/Gesch_ftsf_hrer__c.field-meta.xml
<CustomField>
    <fullName>Gesch_ftsf_hrer__c</fullName>
    <label>Geschäftsführer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>