force-app/main/default/objects/Property__c/fields/Geschossflaechenzahl__c.field-meta.xml
<CustomField>
    <fullName>Geschossflaechenzahl__c</fullName>
    <label>GFZ</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>