force-app/main/default/objects/Property__c/fields/GewerbeMieteProMMonat__c.field-meta.xml
<CustomField>
    <fullName>GewerbeMieteProMMonat__c</fullName>
    <label>Gewerbe (Miete pro m²/Monat)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>