force-app/main/default/objects/Property__c/fields/GezahlteRechnungenAktuellerRate__c.field-meta.xml
<CustomField>
    <fullName>GezahlteRechnungenAktuellerRate__c</fullName>
    <formula>AktuelleMaBVRateLookup__r.GezahlteRechnungen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anzahl aktuelle Rate gezahlt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>