force-app/main/default/objects/Property__c/fields/GLControllingUebersicht__c.field-meta.xml
<CustomField>
    <fullName>GLControllingUebersicht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Controlling abgeschlossen</label>
    <type>Checkbox</type>
</CustomField>