force-app/main/default/objects/Property__c/fields/Grundflaechenzahl__c.field-meta.xml
<CustomField>
    <fullName>Grundflaechenzahl__c</fullName>
    <label>GRZ</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>