force-app/main/default/objects/Property__c/fields/Grundprovision__c.field-meta.xml
<CustomField>
    <fullName>Grundprovision__c</fullName>
    <label>Grundprovision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>