force-app/main/default/objects/Property__c/fields/Grundstucksgroesse__c.field-meta.xml
<CustomField>
    <fullName>Grundstucksgroesse__c</fullName>
    <label>Grundstücksgröße (qm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>