force-app/main/default/objects/Property__c/fields/GutschriftenSachkonto__c.field-meta.xml
<CustomField>
    <fullName>GutschriftenSachkonto__c</fullName>
    <label>Gutschriften Sachkonto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>