force-app/main/default/objects/Property__c/fields/GutschriftenUeber__c.field-meta.xml
<CustomField>
    <fullName>GutschriftenUeber__c</fullName>
    <label>Gutschriften über</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carestone Service GmbH</fullName>
            </value>
            <value>
                <fullName>Carestone Vertriebs GmbH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>