force-app/main/default/objects/Property__c/fields/Hauptimmobilie__c.field-meta.xml
<CustomField>
    <fullName>Hauptimmobilie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hauptimmobilie</label>
    <referenceTo>Hauptimmobilie__c</referenceTo>
    <relationshipLabel>Immobilien</relationshipLabel>
    <relationshipName>Immobilien</relationshipName>
    <type>Lookup</type>
</CustomField>