force-app/main/default/objects/Property__c/fields/HerstellungskostenGIK__c.field-meta.xml
<CustomField>
    <fullName>HerstellungskostenGIK__c</fullName>
    <label>Herstellungskosten GIK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>