force-app/main/default/objects/Property__c/fields/HideSoldAppartmentsVp__c.field-meta.xml
<CustomField>
    <fullName>HideSoldAppartmentsVp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to hide/unhide sold Appartments of this Property in Vertriebsportal</description>
    <label>Hide Sold Appartments (in VP)</label>
    <type>Checkbox</type>
</CustomField>