force-app/main/default/objects/Property__c/fields/Highlight_2__c.field-meta.xml
<CustomField>
    <fullName>Highlight_2__c</fullName>
    <label>Highlight 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>