force-app/main/default/objects/Property__c/fields/Highlights__c.field-meta.xml
<CustomField>
    <fullName>Highlights__c</fullName>
    <label>Highlights</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>