force-app/main/default/objects/Property__c/fields/Hinweis_Kaufpreiszahlung__c.field-meta.xml
<CustomField>
    <fullName>Hinweis_Kaufpreiszahlung__c</fullName>
    <label>Hinweis Kaufpreiszahlung</label>
    <type>TextArea</type>
</CustomField>