force-app/main/default/objects/Property__c/fields/Hoehe3MaBVRateIn__c.field-meta.xml
<CustomField>
    <fullName>Hoehe3MaBVRateIn__c</fullName>
    <description>Wie hoch ist die 3. MaBV Rate (alle MaBV Raten müssen gesamt auf 100% kommen)</description>
    <inlineHelpText>Wie hoch ist die 3. MaBV Rate (alle MaBV Raten müssen gesamt auf 100% kommen)</inlineHelpText>
    <label>Höhe 3. MaBV Rate in %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>