force-app/main/default/objects/Property__c/fields/HRB__c.field-meta.xml
<CustomField>
    <fullName>HRB__c</fullName>
    <label>HRB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>