force-app/main/default/objects/Property__c/fields/IDWS4Beantragt__c.field-meta.xml
<CustomField>
    <fullName>IDWS4Beantragt__c</fullName>
    <label>IDWS4 beantragt</label>
    <type>Date</type>
</CustomField>