force-app/main/default/objects/Property__c/fields/IDWS4VorhandenSeit__c.field-meta.xml
<CustomField>
    <fullName>IDWS4VorhandenSeit__c</fullName>
    <label>IDWS 4 vorhanden</label>
    <type>Date</type>
</CustomField>