force-app/main/default/objects/Property__c/fields/IKostenDZ__c.field-meta.xml
<CustomField>
    <fullName>IKostenDZ__c</fullName>
    <label>I-Kosten DZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>