force-app/main/default/objects/Property__c/fields/IKostenEZ__c.field-meta.xml
<CustomField>
    <fullName>IKostenEZ__c</fullName>
    <label>I-Kosten EZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>