force-app/main/default/objects/Property__c/fields/Immobilie_promoten__c.field-meta.xml
<CustomField>
    <fullName>Immobilie_promoten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immobilie promoten</label>
    <type>Checkbox</type>
</CustomField>