force-app/main/default/objects/Property__c/fields/Immoframe__c.field-meta.xml
<CustomField>
    <fullName>Immoframe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immoframe nicht anzeigen</label>
    <type>Checkbox</type>
</CustomField>