force-app/main/default/objects/Property__c/fields/ImmoframeHeadline__c.field-meta.xml
<CustomField>
    <fullName>ImmoframeHeadline__c</fullName>
    <label>Immoframe Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>