force-app/main/default/objects/Property__c/fields/Immorechner_Deaktivieren__c.field-meta.xml
<CustomField>
    <fullName>Immorechner_Deaktivieren__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Falls angehakt, deaktiviert es den Immorechner im Immofinder im Maklerportal 2.0 für alle Apartments dieses Objekts.</description>
    <inlineHelpText>Falls angehakt, deaktiviert es den Immorechner im Immofinder im Maklerportal 2.0 für alle Apartments dieses Objekts.</inlineHelpText>
    <label>Immorechner Deaktivieren</label>
    <type>Checkbox</type>
</CustomField>