force-app/main/default/objects/Property__c/fields/ImVertriebsportalSichtbar__c.field-meta.xml
<CustomField>
    <fullName>ImVertriebsportalSichtbar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Im Vertriebsportal sichtbar</label>
    <type>Checkbox</type>
</CustomField>