force-app/main/default/objects/Property__c/fields/In_HypoServ__c.field-meta.xml
<CustomField>
    <fullName>In_HypoServ__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Legt fest, ob diese Immobilie als öffentliche Immobilie unter einem HypoServ-Benutzer im HypoServ-Maklerportal sichtbar ist.</description>
    <inlineHelpText>Legt fest, ob diese Immobilie als öffentliche Immobilie unter einem HypoServ-Benutzer im HypoServ-Maklerportal sichtbar ist.</inlineHelpText>
    <label>In HypoServ</label>
    <type>Checkbox</type>
</CustomField>