force-app/main/default/objects/Property__c/fields/In_Vorschau__c.field-meta.xml
<CustomField>
    <fullName>In_Vorschau__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wenn die Immobilie im Maklerportal nicht komplett angezeigt werden soll, sondern nur einige Elemente gezeigt werden, ist dieser Wert auf &quot;Wahr&quot;.</description>
    <inlineHelpText>Wenn die Immobilie im Maklerportal nicht komplett angezeigt werden soll, sondern nur einige Elemente gezeigt werden, ist dieser Wert auf &quot;Wahr&quot;.</inlineHelpText>
    <label>In Vorschau</label>
    <type>Checkbox</type>
</CustomField>