force-app/main/default/objects/Property__c/fields/IncentivierungIST__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungIST__c</fullName>
    <label>Incentivierung IST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>