force-app/main/default/objects/Property__c/fields/IncentivierungKundeGezahlt__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungKundeGezahlt__c</fullName>
    <label>Incentivierung Kunde gezahlt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>