force-app/main/default/objects/Property__c/fields/IncentivierungKundeIst__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungKundeIst__c</fullName>
    <label>Incentivierung Kunde Ist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>