force-app/main/default/objects/Property__c/fields/IncentivierungMaklerBrutto__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungMaklerBrutto__c</fullName>
    <formula>ROUND( IncentivierungMaklerNetto__c, 2 ) + ROUND( IncentivierungMaklerUSt__c, 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentivierung Makler Brutto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>