force-app/main/default/objects/Property__c/fields/IncentivierungMaklerGezahltBrutto__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungMaklerGezahltBrutto__c</fullName>
    <label>Incentivierung Makler gezahlt Brutto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>