force-app/main/default/objects/Property__c/fields/IncentivierungMaklerNetto__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungMaklerNetto__c</fullName>
    <label>Incentivierung Makler Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>